--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -6,7 +6,7 @@ layout: default
   <paper-toolbar>
     <paper-icon-button icon="arrow-back" onclick="location.href='{{ site.baseurl }}/'"></paper-icon-button>
     <div class="title">
-      {{ site.title }}Site Title
+      {{ site.title }}
     </div>
     <paper-icon-button icon="search"></paper-icon-button>
   </paper-toolbar>
