--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,4 +1,9 @@
 <head>
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>{{ page.title }} | {{ site.title }}</title>
+
   <link rel="import" href="{{ site.baseurl }}/assets/bower_components/polymer/polymer.html" />
   <link rel="import" href="{{ site.baseurl }}/assets/bower_components/paper-header-panel/paper-header-panel.html" />
   <link rel="import" href="{{ site.baseurl }}/assets/bower_components/paper-toolbar/paper-toolbar.html" />
