--- a/_includes/head.html
+++ b/_includes/head.html
@@ -15,10 +15,13 @@
   <link rel="import" href="{{ site.baseurl }}/assets/bower_components/paper-menu/paper-menu.html">
   <link rel="import" href="{{ site.baseurl }}/assets/bower_components/paper-menu-button/paper-menu-button.html">
   <link rel="import" href="{{ site.baseurl }}/assets/bower_components/paper-item/paper-item.html">
+  <link rel="import" href="{{ site.baseurl }}/assets/bower_components/paper-button/paper-button.html">
 
   <link rel="import" href="{{ site.baseurl }}/assets/bower_components/iron-icon/iron-icon.html">
   <link rel="import" href="{{ site.baseurl }}/assets/bower_components/iron-icons/iron-icons.html">
   <link rel="import" href="{{ site.baseurl }}/assets/bower_components/iron-icons/social-icons.html">
+  <link rel="import" href="{{ site.baseurl }}/assets/bower_components/fontawesome-iconset/fa-icons.html">
+
 
   <link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/assets/css/highlighter.css" />
   <link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/assets/css/style.css" />
