--- a/_includes/head.html
+++ b/_includes/head.html
@@ -4,6 +4,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>{{ page.title }} | {{ site.title }}</title>
 
+  <script src="{{ site.baseurl }}/assets/bower_components/webcomponentsjs/webcomponents.js"></script>
+
   <link rel="import" href="{{ site.baseurl }}/assets/bower_components/polymer/polymer.html" />
   <link rel="import" href="{{ site.baseurl }}/assets/bower_components/paper-header-panel/paper-header-panel.html" />
   <link rel="import" href="{{ site.baseurl }}/assets/bower_components/paper-toolbar/paper-toolbar.html" />
@@ -20,10 +22,10 @@
   <link rel="import" href="{{ site.baseurl }}/assets/bower_components/iron-icon/iron-icon.html">
   <link rel="import" href="{{ site.baseurl }}/assets/bower_components/iron-icons/iron-icons.html">
   <link rel="import" href="{{ site.baseurl }}/assets/bower_components/iron-icons/social-icons.html">
-  <link rel="import" href="{{ site.baseurl }}/assets/bower_components/fontawesome-iconset/fa-icons.html">
-
 
   <link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/assets/css/highlighter.css" />
   <link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/assets/css/style.css" />
   <link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/assets/css/simplegrid.css" />
+  <link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/assets/bower_components/font-awesome/css/font-awesome.min.css" />
+
 </head>
