--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -19,10 +19,21 @@ body{
 }
 
 .postview-header{
-  padding: 24px;
+  padding: 32px;
   height: 100%;
+  max-height: 720px;
   background-color: grey;
   color: white;
+}
+
+.postview-titlebox > h1{
+  font-size: 45px;
+}
+
+@media handheld, only screen and (max-width: 767px) {
+  .postview-titlebox > h1{
+    font-size: 30px;
+  }
 }
 
 .postview-content{
@@ -31,8 +42,8 @@ body{
 }
 
 .share-btn{
-  margin-top: -30px;
-  margin-left: 85%;
+  margin-top: -35px;
+  margin-left: 80%;
 }
 
 .hr-with-margin{
@@ -46,4 +57,14 @@ body{
 
 img{
   width: 100%;
+}
+
+.footer{
+  margin-top: 16px;
+  background-color: #ecf0f1;
+  padding: 32px;
+}
+
+.footer-btn{
+  color: black;
 }
