--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -17,7 +17,7 @@ layout: default
 
           <paper-material class="content post-card" elevation="0"
             onmouseover="this.elevation='2'" onmouseout="this.elevation='0'"
-            onclick="location.href='{{ site.baseurl}}/{{ post.url }}'"
+            onclick="location.href='{{ site.baseurl }}/{{ post.url }}'"
             style="{% if post.image %}background: linear-gradient( rgba(0, 0, 0, 0.4),
             rgba(0, 0, 0, 0.4) ), url('{{ post.image }}')center / cover;{% endif %}">
               <paper-ripple></paper-ripple>
@@ -37,25 +37,24 @@ layout: default
         </div>
         {% endfor %}
       </div>
-      <table align="center" style="margin-bottom:160px;">
+      <table align="center" style="margin-bottom:64px; margin-top:32px;">
         <tr>
           <td style="padding-right:16px;">
-            <a href="{% if paginator.next_page %}{{ site.baseurl}}/{{ paginator.next_page_path }}{% else %}{% endif %}">
-              <paper-button>
-                <iron-icon icon="arrow-back"></iron-icon> Older
-              </button>
-              </a>
+              <paper-button {% if paginator.next_page %} onclick="location.href='{{ site.baseurl }}/{{ paginator.next_page_path }}'"{% else %}{% endif %}>
+                <iron-icon icon="arrow-back"></iron-icon>
+                Older
+              </paper-button>
             </td>
             <td>{{ paginator.page }} / {{ paginator.total_pages }}</td>
             <td style="padding-left:16px;">
-              <a href="{% if paginator.previous_page %}{{ site.baseurl}}/{{ paginator.previous_page_path }}{% else %}{% endif %}">
-                <paper-button>
-               Newer <iron-icon icon="arrow_forward"></iron-icon>
-              </button>
-             </a>
+                <paper-button {% if paginator.previous_page %} onclick="location.href='{{ site.baseurl }}/{{ paginator.previous_page_path }}'"{% else %}{% endif %}>
+               Newer
+               <iron-icon icon="arrow-forward"></iron-icon>
+             </paper-button>
            </td>
          </tr>
        </table>
+       {% include footer.html %}
     </div>
   </paper-header-panel>
 </body>
