--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -3,7 +3,7 @@ layout: default
 ---
 <body>
   <paper-header-panel>
-  <paper-toolbar>
+  <paper-toolbar id="postview-toolbar" style='{% if page.color %}background: {{ page.color }};{% endif %}'>
     <paper-icon-button icon="arrow-back" onclick="location.href='{{ site.baseurl }}/'"></paper-icon-button>
     <div class="title">
       {{ site.title }}
@@ -11,7 +11,7 @@ layout: default
     <paper-icon-button icon="search"></paper-icon-button>
   </paper-toolbar>
   <div>
-    <section class="postview-header" elevation="0"
+    <section class="postview-header" elevation="0" id="header"
       style="{% if page.image %}background: linear-gradient( rgba(0, 0, 0, 0.4),
       rgba(0, 0, 0, 0.4) ), url('{{ page.image }}')center / cover;{% endif %}"
       align="center">
