--- a/_includes/head.html
+++ b/_includes/head.html
@@ -19,6 +19,7 @@
   <link rel="import" href="{{ site.baseurl }}/assets/bower_components/paper-item/paper-item.html">
   <link rel="import" href="{{ site.baseurl }}/assets/bower_components/paper-button/paper-button.html">
 
+  <link rel="import" href="{{ site.baseurl }}/assets/bower_components/iron-collapse/iron-collapse.html">
   <link rel="import" href="{{ site.baseurl }}/assets/bower_components/iron-icon/iron-icon.html">
   <link rel="import" href="{{ site.baseurl }}/assets/bower_components/iron-icons/iron-icons.html">
   <link rel="import" href="{{ site.baseurl }}/assets/bower_components/iron-icons/social-icons.html">
