--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -3,12 +3,7 @@ layout: default
 ---
 <body>
   <paper-header-panel >
-    <paper-toolbar>
-      <div class="title">
-        {{ site.title }}
-      </div>
-      <paper-icon-button icon="search"></paper-icon-button>
-    </paper-toolbar>
+    {% include homeheader.html %}
     <div>
       <div class="grid grid-pad">
 
