--- a/_includes/header.html
+++ b/_includes/header.html
@@ -3,5 +3,6 @@
   <div class="title">
     {{ site.title }}
   </div>
+  <paper-icon-button icon="label" onclick="location.href='{{ site.baseurl }}/tags'"></paper-icon-button>
   <paper-icon-button icon="search"></paper-icon-button>
 </paper-toolbar>
