added search feature

--- a/_includes/homeheader.html
+++ b/_includes/homeheader.html
@@ -2,7 +2,7 @@
   <div class="title">
     {{ site.title }}
   </div>
-  <paper-icon-button icon="archive"></paper-icon-button>
+  <paper-icon-button icon="archive" onclick="location.href='{{ site.baseurl }}/archive'"></paper-icon-button>
   <paper-icon-button icon="label" onclick="location.href='{{ site.baseurl }}/tags'"></paper-icon-button>
-  <paper-icon-button icon="search"></paper-icon-button>
+  <paper-icon-button icon="search" onclick="toggleSearch()"></paper-icon-button>
 </paper-toolbar>
