--- a/_includes/head.html
+++ b/_includes/head.html
@@ -18,7 +18,9 @@
   <link rel="import" href="{{ site.baseurl }}/assets/bower_components/paper-menu-button/paper-menu-button.html">
   <link rel="import" href="{{ site.baseurl }}/assets/bower_components/paper-item/paper-item.html">
   <link rel="import" href="{{ site.baseurl }}/assets/bower_components/paper-button/paper-button.html">
+  <link rel="import" href="{{ site.baseurl }}/assets/bower_components/paper-input/paper-input.html">
 
+  <link rel="import" href="{{ site.baseurl }}/assets/bower_components/iron-pages/iron-pages.html">
   <link rel="import" href="{{ site.baseurl }}/assets/bower_components/iron-collapse/iron-collapse.html">
   <link rel="import" href="{{ site.baseurl }}/assets/bower_components/iron-icon/iron-icon.html">
   <link rel="import" href="{{ site.baseurl }}/assets/bower_components/iron-icons/iron-icons.html">
