--- a/_includes/javascripts.html
+++ b/_includes/javascripts.html
@@ -1,3 +1,25 @@
+<script>
+/**
+* RECOMMENDED CONFIGURATION VARIABLES: EDIT AND UNCOMMENT THE SECTION BELOW TO INSERT DYNAMIC VALUES FROM YOUR PLATFORM OR CMS.
+* LEARN WHY DEFINING THESE VARIABLES IS IMPORTANT: https://disqus.com/admin/universalcode/#configuration-variables
+*/
+/*
+var disqus_config = function () {
+this.page.url = PAGE_URL; // Replace PAGE_URL with your page's canonical URL variable
+this.page.identifier = PAGE_IDENTIFIER; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
+};
+*/
+(function() { // DON'T EDIT BELOW THIS LINE
+var d = document, s = d.createElement('script');
+
+s.src = '//{{ site.disqus }}.disqus.com/embed.js';
+
+s.setAttribute('data-timestamp', +new Date());
+(d.head || d.body).appendChild(s);
+})();
+</script>
+<noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript" rel="nofollow">comments powered by Disqus.</a></noscript>
+
 <script src="https://apis.google.com/js/platform.js" async defer></script>
 <div id="fb-root"></div>
 <script>(function(d, s, id) {
@@ -17,4 +39,14 @@
   ga('create', '{{ site.google_analytics }}', 'auto');
   ga('send', 'pageview');
 
+</script>
+<script>
+  function toggleSearch(){
+    var pages = document.querySelector('iron-pages');
+    if(pages.selected==0){
+        pages.selected = 1;
+    }else{
+      pages.selected = 0;
+    }
+  }
 </script>
