--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,9 +1,21 @@
 <head>
+  <!-- METAS -->
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>{{ page.title }} | {{ site.title }}</title>
 
+  <!-- METAS - Open Graph Protocol -->
+  <meta property="og:site_name" content="{{ site.title }}" />
+  {% if page.title %}
+  <meta property="og:title" content="{{ page.title }}" />
+  {% endif %}
+  {% if page.image %}
+  <meta property="og:image" content="{{ page.image }}" />
+  {% endif %}
+  <meta property="og:url" content="{{ site.url }}{{ site.baseurl }}{{ page.url }}" />
+
+  <!-- IMPORTS -->
   <script src="{{ site.baseurl }}/assets/bower_components/webcomponentsjs/webcomponents.js"></script>
 
   <link rel="import" href="{{ site.baseurl }}/assets/bower_components/polymer/polymer.html" />
